--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -1,14 +1,3 @@
-.app-pinner-icon:hover {
-    background-color: rgba(139, 139, 139, 0.2) !important;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15) !important;
-    border-radius: 8px;
-}
-
-.app-pinner-icon:active {
-    transform: translateY(0) scale(0.95) !important;
-    transition-duration: 0.1s !important;
-}
-
 .app-pinner-remove-btn {
     background-color: transparent;
     border-radius: 50%;
@@ -33,21 +22,12 @@
     border-radius: 50px;
 }
 
-.app-pinner-container:hover {
-    background-color: transparent !important;
-}
-
-
 .search-box {
-    width: 100%;
+    width: 200px;
     justify-content: center;
     align-items: center;
     padding: 8px 0;
     display: flex;
     text-align: center;
     align-items: center;
-}
-
-.app-pinner-icon:drag-active {
-    opacity: 0.5;
 }
