refactor AppPinner to enhance icon animation and update button styles for improved user interaction

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -1,6 +1,6 @@
 .app-pinner-remove-btn {
     background-color: transparent;
-    border-radius: 50%;
+    border-radius: 50px;
     min-width: 18px;
     min-height: 18px;
     padding: 2px;
