--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -31,3 +31,25 @@
     text-align: center;
     align-items: center;
 }
+
+.app-pinner-running-indicator {
+    background-color: #ff0000;
+    border-radius: 4px;
+    width: 8px;
+    height: 8px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.3);
+    z-index: 1000;
+}
+
+.app-pinner-icon-container {
+    position: relative;
+}
+
+.app-pinner-icon-box {
+    position: relative; /* Necessario per il posizionamento assoluto dell'indicatore */
+}
+
+
